tests/ui/failing/generic-recursive-tag.rs.stderr
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.00s
     Running `target/debug/stable_mir_json -Zno-codegen /home/zncv/Applications/mir-semantics-compiletest/ui/generics/generic-recursive-tag.rs`
warning: lint `unused_tuple_struct_fields` has been renamed to `dead_code`
 --> /home/zncv/Applications/mir-semantics-compiletest/ui/generics/generic-recursive-tag.rs:4:24
  |
4 | enum list<T> { #[allow(unused_tuple_struct_fields)] cons(Box<T>, Box<list<T>>), nil, }
  |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^ help: use the new name: `dead_code`
  |
  = note: `#[warn(renamed_and_removed_lints)]` on by default


thread 'rustc' has overflowed its stack
fatal runtime error: stack overflow
Aborted (core dumped)
